# plover-stroke-counter-plugin

./: README.md  setup.cfg
plover_stroke_counter/: __init__.py  plugin.py
