[metadata]
name = plover-stroke-counter
description = A simple plugin to count keystroke strokes in Plover
long_description = file: README.md
long_description_content_type = text/markdown
keywords = plover, plover_plugin, stroke_counter
version = 0.0.1

[options]
zip_safe = True
install_requires =
    plover>=4.0.0
setup_requires =
    setuptools>=69.0.0
packages =
    plover_stroke_counter

[options.entry_points]
plover.extension =
    stroke_counter = plover_stroke_counter.plugin:StrokeCounterPlugin
